# tox

./: .gitignore  LICENSE  README.md  tox.cabal
app/: Main.hs
src/: Lib.hs
src/Tox/: Envelope.hs  IO.hs  Mix.hs  Music.hs  Notation.hs  NotationTH.hs  NotationUtil.hs  Notes.hs  NotesTH.hs  Synth.hs  Types.hs  Util.hs
