name:                tox
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ratatosk/tox#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Grafov
maintainer:          graphov@gmail.com
copyright:           Pavel Grafov
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tox.IO
                     , Tox.Types
                     , Tox.Util
  build-depends:       base >= 4.7 && < 5
                     , array
                     , Yampa
                     , HCodecs
  default-language:    Haskell2010

executable tox-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tox
                     , Yampa
  default-language:    Haskell2010

test-suite tox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ratatosk/tox
